// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php declare(strict_types=1); ?>
<html>
    <body>
        <?php
          $a = 1;
        ?>
    </body>
</html>

=====================================output=====================================
<?php declare(strict_types=1) ?>
<html>
    <body>
        <?php $a = 1; ?>
    </body>
</html>

================================================================================
`;

exports[`declare-1.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php declare(strict_types=1) ?>
<html>
    <body>
        <?php
          $a = 1;
        ?>
    </body>
</html>

=====================================output=====================================
<?php declare(strict_types=1) ?>
<html>
    <body>
        <?php $a = 1; ?>
    </body>
</html>

================================================================================
`;

exports[`inline.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

function inline() {
    ?>
    <span>Hello World!</span>
    <?php
}

function inline1() {
    ?><span>Hello World!</span>
    <?php
}

function inline2() {
    ?>
    <span>Hello World!</span><?php
}

function inlineInOneLine() {
    ?><span>Hello World!</span><?php
}

function inlineNested() {
    ?>
    <div>
      <span>Hello World!</span>
    </div>
    <?php
}

function inlineNested1() {
    ?><div>
    <span>Hello World!</span>
    </div><?php
}

function inlineMultipleStatements() {
    $a = 1;
    ?>
    <span>Hello World!</span>
    <?php
    $b = 1;
    ?>
    <span>Hello World!</span>
    <?php
    $c = 1;
}

function test() {
  ?>
  <span>Hello World!</span>
  <?php
  $a = 1;
  $b = 1;
  $c = 1;
}

function otherTest()
{
    echo '1';
    ?>
      <div>
        <div>
          <div>
            <?php echo '2'; ?>
            <div>
            <?php
            echo '3';
            echo '4';
            echo '5';
            ?>
            </div>
          </div>
        </div>
      </div>
    <?php
    echo '6';
}

function fff()
{
    ?>
    <div>
      <div>
      <?php
      function ffff()
      {
          ?>
          <div>
            <div>
              <?php echo 'test'; ?>
            </div>
          </div>
          <?php
      }
      ?>
      </div>
    </div>
    <?php
}

function ffff()
{
  echo '1';
  echo '2';
  echo '3';
  echo '4';
  ?>
  <div>foo</div>
  <?php
  echo '5';
  echo '6';
  echo '7';
  echo '8';
}

function fffff()
{
    echo '1';
    echo '2';
    echo '3';
    echo '4';
    ?>
    <div>
      <div>
        <div>
          <?php
          echo 'nested';
          echo 'nested';
          echo 'nested';
          ?>
        </div>
      </div>
    </div>
    <?php
    echo '5';
    echo '6';
    echo '7';
    echo '8';
}

function ffffff()
{
    echo '1';
    echo '2';
    echo '3';
    echo '4';
    ?>
      <div>
        <div>
          <div>
            <div>
                <?php
                function ffffff() {
                    echo '1';
                    echo '2';
                    echo '3';
                    echo '4';
                    ?>
                    <div>FooBar</div>
                    <?php
                    echo '5';
                    echo '6';
                    echo '7';
                    echo '8';
                }
                ?>
            </div>
          </div>
        </div>
      </div>
    <?php
    echo '5';
    echo '6';
    echo '7';
    echo '8';
}

=====================================output=====================================
<?php

function inline()
{
    ?>
    <span>Hello World!</span>
    <?php
}

function inline1()
{
    ?><span>Hello World!</span>
    <?php
}

function inline2()
{
    ?>
    <span>Hello World!</span><?php
}

function inlineInOneLine()
{
    ?><span>Hello World!</span><?php
}

function inlineNested()
{
    ?>
    <div>
      <span>Hello World!</span>
    </div>
    <?php
}

function inlineNested1()
{
    ?><div>
    <span>Hello World!</span>
    </div><?php
}

function inlineMultipleStatements()
{
    $a = 1; ?>
    <span>Hello World!</span>
    <?php $b = 1; ?>
    <span>Hello World!</span>
    <?php $c = 1;
}

function test()
{
    ?>
  <span>Hello World!</span>
  <?php
  $a = 1;
  $b = 1;
  $c = 1;
}

function otherTest()
{
    echo "1"; ?>
      <div>
        <div>
          <div>
            <?php echo "2"; ?>
            <div>
            <?php
            echo "3";
            echo "4";
            echo "5";
            ?>
            </div>
          </div>
        </div>
      </div>
    <?php echo "6";
}

function fff()
{
    ?>
    <div>
      <div>
      <?php function ffff()
      {
          ?>
          <div>
            <div>
              <?php echo "test"; ?>
            </div>
          </div>
          <?php
      } ?>
      </div>
    </div>
    <?php
}

function ffff()
{
    echo "1";
    echo "2";
    echo "3";
    echo "4";
    ?>
  <div>foo</div>
  <?php
  echo "5";
  echo "6";
  echo "7";
  echo "8";
}

function fffff()
{
    echo "1";
    echo "2";
    echo "3";
    echo "4";
    ?>
    <div>
      <div>
        <div>
          <?php
          echo "nested";
          echo "nested";
          echo "nested";
          ?>
        </div>
      </div>
    </div>
    <?php
    echo "5";
    echo "6";
    echo "7";
    echo "8";
}

function ffffff()
{
    echo "1";
    echo "2";
    echo "3";
    echo "4";
    ?>
      <div>
        <div>
          <div>
            <div>
                <?php function ffffff()
                {
                    echo "1";
                    echo "2";
                    echo "3";
                    echo "4";
                    ?>
                    <div>FooBar</div>
                    <?php
                    echo "5";
                    echo "6";
                    echo "7";
                    echo "8";
                } ?>
            </div>
          </div>
        </div>
      </div>
    <?php
    echo "5";
    echo "6";
    echo "7";
    echo "8";
}

================================================================================
`;

exports[`mixed.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>Test.</p>
<?php echo 'String.'; ?>
<p>Test.</p>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif; ?>
<?php echo '<input type="hidden" value="' . htmlspecialchars($data) . '" />'; ?>
<div></div>
<?php
echo 'foo';
echo 'bar';
?>
<div class="<?php echo $class; ?>"></div>
<div>
  <h1>
    <?php print_welcome_message(); ?>
  </h1>
</div>
<div id="results">
  <table class="sortable">
    <?php $results = $statement->fetchAll(PDO::FETCH_ASSOC); ?>
    <?php do { ?>
      <tr>
        <?php for ($i = 0; $i < count($columns); $i++): ?>
          <td><?php echo $row[$i] ?></td>
        <?php endfor; ?>
      </tr>
    <?php } while (($row = next($results)) != false); ?>
  </table>
</div>
<div id="results">
  <table class="sortable">
    <?php foreach ($statement->fetchAll(PDO::FETCH_ASSOC) as $row): ?>
      <tr>
        <?php foreach ($row as $element): ?>
          <td><?php echo $element ?></td>
        <?php endforeach; ?>
      </tr>
    <?php endforeach; ?>
  </table>
</div>
<div>
  <?php switch($variable):
  case 1: ?>
      <div>Newspage</div>
      <?php break; ?>
  <?php case 2: ?>
      </div>Forum<div>
  <?php break; ?>
  <?php endswitch; ?>
</div>
<ul>
  <?php for($i=1;$i<=5;$i++){ ?>
      <li>Menu Item <?php echo $i; ?></li>
  <?php } ?>
</ul>
<?php while(true): ?>
  <span>Text</span>
<?php endwhile; ?>
<h1>Head</h1>
<?php $var = 1; ?>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif; ?>
<?php $var = 1; ?>
<div>
  <?php while ($i <= 10): ?>
    <span><?php echo $i; ?></span>
    <?php $i++; ?>
  <?php endwhile; ?>
</div>
<div>
  <?php if($a > $b): ?>
    <span><?php echo $a." > ".$b;?></span>
  <?php elseif($a == $b): ?>
    <span><?php echo $a." == ".$b; ?></span>
  <?php else: ?>
    <span><?php echo $a." < ".$b; ?></span>
  <?php endif; ?>
</div>

=====================================output=====================================
<p>Test.</p>
<?php echo "String."; ?>
<p>Test.</p>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif; ?>
<?php echo '<input type="hidden" value="' . htmlspecialchars($data) . '" />'; ?>
<div></div>
<?php
echo "foo";
echo "bar";
?>
<div class="<?php echo $class; ?>"></div>
<div>
  <h1>
    <?php print_welcome_message(); ?>
  </h1>
</div>
<div id="results">
  <table class="sortable">
    <?php $results = $statement->fetchAll(PDO::FETCH_ASSOC); ?>
    <?php do { ?>
      <tr>
        <?php for ($i = 0; $i < count($columns); $i++): ?>
          <td><?php echo $row[$i]; ?></td>
        <?php endfor; ?>
      </tr>
    <?php } while (($row = next($results)) != false); ?>
  </table>
</div>
<div id="results">
  <table class="sortable">
    <?php foreach ($statement->fetchAll(PDO::FETCH_ASSOC) as $row): ?>
      <tr>
        <?php foreach ($row as $element): ?>
          <td><?php echo $element; ?></td>
        <?php endforeach; ?>
      </tr>
    <?php endforeach; ?>
  </table>
</div>
<div>
  <?php switch ($variable): case 1: ?>
      <div>Newspage</div>
      <?php break; ?>
  <?php case 2: ?>
      </div>Forum<div>
  <?php break; ?>
  <?php endswitch; ?>
</div>
<ul>
  <?php for ($i = 1; $i <= 5; $i++) { ?>
      <li>Menu Item <?php echo $i; ?></li>
  <?php } ?>
</ul>
<?php while (true): ?>
  <span>Text</span>
<?php endwhile; ?>
<h1>Head</h1>
<?php $var = 1; ?>
<?php if ($expression == true): ?>
  <p>Test.</p>
<?php else: ?>
  <p>Test.</p>
<?php endif; ?>
<?php $var = 1; ?>
<div>
  <?php while ($i <= 10): ?>
    <span><?php echo $i; ?></span>
    <?php $i++; ?>
  <?php endwhile; ?>
</div>
<div>
  <?php if ($a > $b): ?>
    <span><?php echo $a . " > " . $b; ?></span>
  <?php elseif ($a == $b): ?>
    <span><?php echo $a . " == " . $b; ?></span>
  <?php else: ?>
    <span><?php echo $a . " < " . $b; ?></span>
  <?php endif; ?>
</div>

================================================================================
`;

exports[`mixed-1.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
$a = 1;
?>
<div>Foo</div>

=====================================output=====================================
<?php
$a = 1; ?>
<div>Foo</div>

================================================================================
`;

exports[`mixed-2.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>Foo</div>
<?php
$a = 1;
?>

=====================================output=====================================
<div>Foo</div>
<?php $a = 1;
?>

================================================================================
`;

exports[`mixed-3.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>
<div>Hello world</div>

=====================================output=====================================
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>
<div>Hello world</div>

================================================================================
`;

exports[`mixed-4.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>Hello world</div>
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>

=====================================output=====================================
<div>Hello world</div>
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>

================================================================================
`;

exports[`mixed-5.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
text
<?php
if (!empty($dataXXXXXXXXXXXXXXXXXXXX)) {
    foreach ($dataXXXXXXXXXXXXXXXXXXXX as $key => $value) {
        if ((!is_string($value) && !is_numeric($value)) || !is_string($key)) {
            continue;
        }
        if (get_magic_quotes_gpc()) {
            $value = htmlspecialchars(stripslashes((string) $value));
        } else {
            $value = htmlspecialchars((string) $value);
        }
    }
}
?>
text
=====================================output=====================================
text
<?php if (!empty($dataXXXXXXXXXXXXXXXXXXXX)) {
    foreach ($dataXXXXXXXXXXXXXXXXXXXX as $key => $value) {
        if ((!is_string($value) && !is_numeric($value)) || !is_string($key)) {
            continue;
        }
        if (get_magic_quotes_gpc()) {
            $value = htmlspecialchars(stripslashes((string) $value));
        } else {
            $value = htmlspecialchars((string) $value);
        }
    }
} ?>
text
================================================================================
`;

exports[`mixed-6.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
    <?php
      echo $this->element('collection/item-title', [
        'class' => $itemTitleClass,
        'small_title' => $item->small_title,
        'title' => $item->title,
        'url' => $url,
        'color' => $item->title_color ?: 'primary',
      ]);
    ?>
  </header>
</section>

<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
    <?php
      echo $this->element('collection/item-title', [
        'class' => $itemTitleClass,
        'small_title' => $item->small_title,
        'title' => $item->title,
        'url' => $url,
        'color' => $item->title_color ?: 'primary',
      ]);
    ?>
  </header> <?= $someOtherVar()->element('collection/item-title', [
    'class' => $itemTitleClass,
    'small_title' => $item->small_title,
    'title' => $item->title,
    'url' => $url,
    'color' => $item->title_color ?: 'primary',
  ]); ?>
</section>

=====================================output=====================================
<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
    <?php echo $this->element("collection/item-title", [
        "class" => $itemTitleClass,
        "small_title" => $item->small_title,
        "title" => $item->title,
        "url" => $url,
        "color" => $item->title_color ?: "primary",
    ]); ?>
  </header>
</section>

<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
    <?php echo $this->element("collection/item-title", [
        "class" => $itemTitleClass,
        "small_title" => $item->small_title,
        "title" => $item->title,
        "url" => $url,
        "color" => $item->title_color ?: "primary",
    ]); ?>
  </header> <?= $someOtherVar()->element("collection/item-title", [
      "class" => $itemTitleClass,
      "small_title" => $item->small_title,
      "title" => $item->title,
      "url" => $url,
      "color" => $item->title_color ?: "primary",
  ]) ?>
</section>

================================================================================
`;

exports[`mixed-7.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
There are <?= $variable; ?> examples

There are <?php echo $variable; ?> examples

=====================================output=====================================
There are <?= $variable ?> examples

There are <?php echo $variable; ?> examples

================================================================================
`;

exports[`mixed-8.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>

<div>
    <?php echo "1"; echo "2"; ?>
</div>

<div>
  <?php echo "1"; ?>
  <?php echo "2"; ?>
</div>

<div>
    <?php function func($x){
        return $x;
    }
    function other_func($x){
        return $x;
    } ?>
</div>

<div>
    <?php function func($x){
        return $x;
    } ?>
    <?php function other_func($x){
        return $x;
    } ?>
</div>

<div>
    <?php echo "1"; ?>
</div>
<div>
    <?php
    echo "1";
    ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    echo "3";
    ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    echo "3";
    echo "4";
    echo "5";
    ?>
</div>
<div>
  <div>
    <div>
      <div>
          <?php echo "1"; ?>
      </div>
    </div>
  </div>
</div>
<div>
  <div>
    <div>
      <div>
          <?php
          echo "1";
          echo "2";
          ?>
      </div>
    </div>
  </div>
</div>

=====================================output=====================================
<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>

<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>

<div>
  <?php echo "1"; ?>
  <?php echo "2"; ?>
</div>

<div>
    <?php
    function func($x)
    {
        return $x;
    }
    function other_func($x)
    {
        return $x;
    }
    ?>
</div>

<div>
    <?php function func($x)
    {
        return $x;
    } ?>
    <?php function other_func($x)
    {
        return $x;
    } ?>
</div>

<div>
    <?php echo "1"; ?>
</div>
<div>
    <?php echo "1"; ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    echo "3";
    ?>
</div>
<div>
    <?php
    echo "1";
    echo "2";
    echo "3";
    echo "4";
    echo "5";
    ?>
</div>
<div>
  <div>
    <div>
      <div>
          <?php echo "1"; ?>
      </div>
    </div>
  </div>
</div>
<div>
  <div>
    <div>
      <div>
          <?php
          echo "1";
          echo "2";
          ?>
      </div>
    </div>
  </div>
</div>

================================================================================
`;

exports[`mixed-9.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php echo '1'; ?>

=====================================output=====================================
<?php echo "1"; ?>

================================================================================
`;

exports[`mixed-10.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php echo '1';

=====================================output=====================================
<?php echo "1";

================================================================================
`;

exports[`mixed-11.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php echo '1'; ?>
<?php echo '2'; ?>

=====================================output=====================================
<?php echo "1"; ?>
<?php echo "2"; ?>

================================================================================
`;

exports[`mixed-12.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php echo '1'; ?>
<?php echo '2';

=====================================output=====================================
<?php echo "1"; ?>
<?php echo "2";

================================================================================
`;

exports[`mixed-13.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php echo '1'; ?>
<?php echo '2'; ?>
<?php echo '3'; ?>

=====================================output=====================================
<?php echo "1"; ?>
<?php echo "2"; ?>
<?php echo "3"; ?>

================================================================================
`;

exports[`mixed-14.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php echo '1'; ?>
<?php echo '2'; ?>
<?php echo '3';

=====================================output=====================================
<?php echo "1"; ?>
<?php echo "2"; ?>
<?php echo "3";

================================================================================
`;

exports[`mixed-15.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

=====================================output=====================================
<?php

================================================================================
`;

exports[`mixed-16.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
  <?php echo $someOtherVar()->element('collection/item-title', [
      'class' => $itemTitleClass,
      'small_title' => $item->small_title,
      'title' => $item->title,
      'url' => $url,
      'color' => $item->title_color ?: 'primary',
  ], [
      'foo' => 'bar',
      'bar' => 'foo',
      'barfoo' => 'foobar',
      'foobar' => 'barfoo'
  ]); ?>
  </header>
  <div> <?php echo $someOtherVar()->element('collection/item-title', [
      'class' => $itemTitleClass,
      'small_title' => $item->small_title,
      'title' => $item->title,
      'url' => $url,
      'color' => $item->title_color ?: 'primary',
  ], [
      'foo' => 'bar',
      'bar' => 'foo',
      'barfoo' => 'foobar',
      'foobar' => 'barfoo'
  ]); ?>
  </div>
</section>

=====================================output=====================================
<section class="<?= $sectionClass ?>">
  <header class="<?= $headerClass ?>">
  <?php echo $someOtherVar()->element(
      "collection/item-title",
      [
          "class" => $itemTitleClass,
          "small_title" => $item->small_title,
          "title" => $item->title,
          "url" => $url,
          "color" => $item->title_color ?: "primary",
      ],
      [
          "foo" => "bar",
          "bar" => "foo",
          "barfoo" => "foobar",
          "foobar" => "barfoo",
      ]
  ); ?>
  </header>
  <div> <?php echo $someOtherVar()->element(
      "collection/item-title",
      [
          "class" => $itemTitleClass,
          "small_title" => $item->small_title,
          "title" => $item->title,
          "url" => $url,
          "color" => $item->title_color ?: "primary",
      ],
      [
          "foo" => "bar",
          "bar" => "foo",
          "barfoo" => "foobar",
          "foobar" => "barfoo",
      ]
  ); ?>
  </div>
</section>

================================================================================
`;

exports[`mixed-17.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
    <?php switch($variable) {
    case 1: ?>
        <div>Newspage</div>
        <?php break; ?>
    <?php case 2: ?>
    <div>Forum</div>
    <?php break; ?>
    <?php } ?>
</div>

=====================================output=====================================
<div>
    <?php switch ($variable) { case 1: ?>
        <div>Newspage</div>
        <?php break; ?>
    <?php case 2: ?>
    <div>Forum</div>
    <?php break; ?>
    <?php } ?>
</div>

================================================================================
`;

exports[`mixed-18.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
    <?php

    echo '1';
    echo '2';

    ?>
</div>

=====================================output=====================================
<div>
    <?php
    echo "1";
    echo "2";
    ?>
</div>

================================================================================
`;

exports[`mixed-19.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
$greet = function($name) {
    ?>
    FooBar
    <?php
};

=====================================output=====================================
<?php
$greet = function ($name) {
    ?>
    FooBar
    <?php
};

================================================================================
`;

exports[`mixed-20.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
try {
    ?>
    Foo bar
    <?php
} catch (Exception $e) {
    ?>
    Foo bar
    <?php
} finally {
    ?>
    Foo bar
    <?php
}

=====================================output=====================================
<?php
try {
    ?>
    Foo bar
    <?php
} catch (Exception $e) {
    ?>
    Foo bar
    <?php
} finally {
    ?>
    Foo bar
    <?php
}

================================================================================
`;

exports[`mixed-21.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

class Foo
{
    public function html() {
        ?>
        Foo Bar
        <?php
    }
}

=====================================output=====================================
<?php

class Foo
{
    public function html()
    {
        ?>
        Foo Bar
        <?php
    }
}

================================================================================
`;

exports[`mixed-22.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>

=====================================output=====================================
<?php if ($expression == true): ?>
    <p>Test.</p>
<?php else: ?>
    <p>Test.</p>
<?php endif; ?>

================================================================================
`;

exports[`mixed-23.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>Foo</div>
<?php for ($really_really_long_variable_name = 0; $really_really_long_variable_name <= 5; $really_really_long_variable_name++) { ?>
    <div>
        <?php echo $really_really_long_variable_name; ?>
    </div>
<?php } ?>
<div>Bar</div>

=====================================output=====================================
<div>Foo</div>
<?php for (
    $really_really_long_variable_name = 0;
    $really_really_long_variable_name <= 5;
    $really_really_long_variable_name++
) { ?>
    <div>
        <?php echo $really_really_long_variable_name; ?>
    </div>
<?php } ?>
<div>Bar</div>

================================================================================
`;

exports[`mixed-24.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
declare(ticks=1) {
    echo '1';
}
?>
<div>FooBar</div>

=====================================output=====================================
<?php
declare(ticks=1) {
    echo "1";
} ?>
<div>FooBar</div>

================================================================================
`;

exports[`mixed-25.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

$a = 1;

=====================================output=====================================
<?php

$a = 1;

================================================================================
`;

exports[`mixed-26.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

namespace Foo;

echo 'test';
?>
<div>Test</div>

=====================================output=====================================
<?php

namespace Foo;

echo "test"; ?>
<div>Test</div>

================================================================================
`;

exports[`mixed-27.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

declare(strict_types=1);

namespace Foo;

echo 'test';
?>
<div>Test</div>

=====================================output=====================================
<?php

declare(strict_types=1);

namespace Foo;

echo "test"; ?>
<div>Test</div>

================================================================================
`;

exports[`mixed-28.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
echo '1';
?>

=====================================output=====================================
<?php
echo "1";
?>

================================================================================
`;

exports[`mixed-29.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php echo '1'; ?>

=====================================output=====================================
<?php echo "1"; ?>

================================================================================
`;

exports[`mixed-30.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php echo '1'; ?>
<div> Foo Bar </div>
<?php
echo 'test';
echo 'foo';
?>

=====================================output=====================================
<?php echo "1"; ?>
<div> Foo Bar </div>
<?php
echo "test";
echo "foo";

?>

================================================================================
`;

exports[`mixed-31.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


<?php echo '1'; ?>


=====================================output=====================================


<?php echo "1"; ?>


================================================================================
`;

exports[`mixed-32.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div></div>
<?php if (true) ?>
    <?php echo 'test'; ?>
<div></div>
<div></div>
<?php if (true) ?>
<?php echo 'test'; ?>
<div></div>

=====================================output=====================================
<div></div>
<?php if (true); ?>
    <?php echo "test"; ?>
<div></div>
<div></div>
<?php if (true); ?>
<?php echo "test"; ?>
<div></div>

================================================================================
`;

exports[`mixed-33.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div></div>
<?php
if (true)
    echo 'test';
?>
<div></div>

=====================================output=====================================
<div></div>
<?php if (true) {
    echo "test";
} ?>
<div></div>

================================================================================
`;

exports[`mixed-34.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div></div>
<?php if (true) echo 'test' ?>
<div></div>

=====================================output=====================================
<div></div>
<?php if (true) {
    echo "test";
} ?>
<div></div>

================================================================================
`;

exports[`mixed-35.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php if (!is_ajax()) { ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
    <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
<?php } ?>

<?php

function test()
{
    ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
    <?php } ?>
    <?php
}

function testTwo()
{
    ?>
    <?php if (!is_ajax()) { ?>
        <?php if (!is_ajax()) { ?>
            <?php do_action('woocommerce_review_order_after_payment'); ?>
        <?php } ?>
        <?php do_action('woocommerce_review_order_after_payment'); ?>
        <?php if (!is_ajax()) { ?>
            <?php do_action('woocommerce_review_order_after_payment'); ?>
        <?php } ?>
    <?php } ?>
    <?php
}

=====================================output=====================================
<?php if (!is_ajax()) { ?>
    <?php do_action("woocommerce_review_order_after_payment"); ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action("woocommerce_review_order_after_payment"); ?>
    <?php } ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action("woocommerce_review_order_after_payment"); ?>
    <?php } ?>
    <?php do_action("woocommerce_review_order_after_payment"); ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php do_action("woocommerce_review_order_after_payment"); ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action("woocommerce_review_order_after_payment"); ?>
    <?php } ?>
<?php } ?>

<?php if (!is_ajax()) { ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action("woocommerce_review_order_after_payment"); ?>
    <?php } ?>
    <?php do_action("woocommerce_review_order_after_payment"); ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action("woocommerce_review_order_after_payment"); ?>
    <?php } ?>
<?php } ?>

<?php
function test()
{
    ?>
    <?php if (!is_ajax()) { ?>
        <?php do_action("woocommerce_review_order_after_payment"); ?>
    <?php } ?>
    <?php
}
function testTwo()
{
    ?>
    <?php if (!is_ajax()) { ?>
        <?php if (!is_ajax()) { ?>
            <?php do_action("woocommerce_review_order_after_payment"); ?>
        <?php } ?>
        <?php do_action("woocommerce_review_order_after_payment"); ?>
        <?php if (!is_ajax()) { ?>
            <?php do_action("woocommerce_review_order_after_payment"); ?>
        <?php } ?>
    <?php } ?>
    <?php
}


================================================================================
`;

exports[`mixed-36.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
    <div>
        <div>
            <div>
                <input id="payment_method_<?php echo esc_attr($gateway->id); ?>"
                    type="radio"
                    class="input-radio"
                    name="payment_method"
                    value="<?php echo esc_attr($gateway->id); ?>"
                    <?php checked($gateway->chosen, true); ?>
                    data-text="<?php echo esc_attr($gateway->order_button_text); ?>"
            </div>
        </div>
    </div>
</div>

=====================================output=====================================
<div>
    <div>
        <div>
            <div>
                <input id="payment_method_<?php echo esc_attr($gateway->id); ?>"
                    type="radio"
                    class="input-radio"
                    name="payment_method"
                    value="<?php echo esc_attr($gateway->id); ?>"
                    <?php checked($gateway->chosen, true); ?>
                    data-text="<?php echo esc_attr(
                        $gateway->order_button_text
                    ); ?>"
            </div>
        </div>
    </div>
</div>

================================================================================
`;

exports[`mixed-37.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<?php
func('verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg');
?>
</div>

<div>
<?php func('verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg'); ?>
</div>

<div>
<?php
func(
  'verVeryVeryVeryVeryVeryVeryVeryLongArg',
  'verVeryVeryVeryVeryVeryVeryVeryLongArg',
  'verVeryVeryVeryVeryVeryVeryVeryLongArg'
);
?>
</div>

<div>
  <?php
  func(
      'verVeryVeryVeryVeryVeryVeryVeryLongArg',
      'verVeryVeryVeryVeryVeryVeryVeryLongArg',
      'verVeryVeryVeryVeryVeryVeryVeryLongArg'
  );
  ?>
</div>

<div>
    <?php func('verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg'); ?>
</div>

<div>
    <?php
    func('verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg', 'verVeryVeryVeryVeryVeryVeryVeryLongArg');
    ?>
</div>

<div>
    <?php
    func(
      'verVeryVeryVeryVeryVeryVeryVeryLongArg',
      'verVeryVeryVeryVeryVeryVeryVeryLongArg',
      'verVeryVeryVeryVeryVeryVeryVeryLongArg'
    );
    ?>
</div>

=====================================output=====================================
<div>
<?php func(
    "verVeryVeryVeryVeryVeryVeryVeryLongArg",
    "verVeryVeryVeryVeryVeryVeryVeryLongArg",
    "verVeryVeryVeryVeryVeryVeryVeryLongArg"
); ?>
</div>

<div>
<?php func(
    "verVeryVeryVeryVeryVeryVeryVeryLongArg",
    "verVeryVeryVeryVeryVeryVeryVeryLongArg",
    "verVeryVeryVeryVeryVeryVeryVeryLongArg"
); ?>
</div>

<div>
<?php func(
    "verVeryVeryVeryVeryVeryVeryVeryLongArg",
    "verVeryVeryVeryVeryVeryVeryVeryLongArg",
    "verVeryVeryVeryVeryVeryVeryVeryLongArg"
); ?>
</div>

<div>
  <?php func(
      "verVeryVeryVeryVeryVeryVeryVeryLongArg",
      "verVeryVeryVeryVeryVeryVeryVeryLongArg",
      "verVeryVeryVeryVeryVeryVeryVeryLongArg"
  ); ?>
</div>

<div>
    <?php func(
        "verVeryVeryVeryVeryVeryVeryVeryLongArg",
        "verVeryVeryVeryVeryVeryVeryVeryLongArg",
        "verVeryVeryVeryVeryVeryVeryVeryLongArg"
    ); ?>
</div>

<div>
    <?php func(
        "verVeryVeryVeryVeryVeryVeryVeryLongArg",
        "verVeryVeryVeryVeryVeryVeryVeryLongArg",
        "verVeryVeryVeryVeryVeryVeryVeryLongArg"
    ); ?>
</div>

<div>
    <?php func(
        "verVeryVeryVeryVeryVeryVeryVeryLongArg",
        "verVeryVeryVeryVeryVeryVeryVeryLongArg",
        "verVeryVeryVeryVeryVeryVeryVeryLongArg"
    ); ?>
</div>

================================================================================
`;

exports[`mixed-38.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php
$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-39.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php

$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-40.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php


$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php

$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-41.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

=====================================output=====================================
<?php

================================================================================
`;

exports[`mixed-42.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
?>

=====================================output=====================================
<?php
?>

================================================================================
`;

exports[`mixed-43.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

?>

=====================================output=====================================
<?php

?>

================================================================================
`;

exports[`mixed-44.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
declare(strict_types=1);
$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php
declare(strict_types=1);
$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-45.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

declare(strict_types=1);

$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php

declare(strict_types=1);

$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-46.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php


declare(strict_types=1);


$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php

declare(strict_types=1);

$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-47.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
namespace Foo;
$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php
namespace Foo;
$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-48.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

namespace Foo;

$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php

namespace Foo;

$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-49.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php


namespace Foo;


$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php

namespace Foo;

$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-50.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
declare(strict_types=1);
namespace Vendor\\Package;
$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php
declare(strict_types=1);
namespace Vendor\\Package;
$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-51.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

declare(strict_types=1);

namespace Vendor\\Package;

$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php

declare(strict_types=1);

namespace Vendor\\Package;

$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-52.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php


declare(strict_types=1);


namespace Vendor\\Package;


$var = 1;
$var = 2;
?>
<div></div>

=====================================output=====================================
<?php

declare(strict_types=1);

namespace Vendor\\Package;

$var = 1;
$var = 2;
?>
<div></div>

================================================================================
`;

exports[`mixed-53.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
try {
    // comment
    ?>
    Foo bar
    <?php
} catch (Exception $e) {
    ?>
    Foo bar
    <?php
} finally {
    ?>
    Foo bar
    <?php
}

=====================================output=====================================
<?php
try {
    // comment
    ?>
    Foo bar
    <?php
} catch (Exception $e) {
    ?>
    Foo bar
    <?php
} finally {
    ?>
    Foo bar
    <?php
}

================================================================================
`;

exports[`mixed-54.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
/**
 * @var string $a
 */
?>
<?= $a ?>
<?php echo $a; ?>

=====================================output=====================================
<?php
/**
 * @var string $a
 */
?>
<?= $a ?>
<?php echo $a; ?>

================================================================================
`;

exports[`mixed-55.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
/**
 * @var string $a
 */
?>
<?php echo $a; ?>
<?= $a ?>

=====================================output=====================================
<?php
/**
 * @var string $a
 */
?>
<?php echo $a; ?>
<?= $a ?>

================================================================================
`;

exports[`mixed-56.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?= $a ?>
<?php echo $a; ?>

=====================================output=====================================
<?= $a ?>
<?php echo $a; ?>

================================================================================
`;

exports[`namespace-1.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php namespace foo; ?>
<html></html>

=====================================output=====================================
<?php namespace foo; ?>
<html></html>

================================================================================
`;

exports[`namespace-2.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php namespace foo; ?>

<html></html>

=====================================output=====================================
<?php namespace foo; ?>

<html></html>

================================================================================
`;

exports[`namespace-3.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
namespace foo;
// comment
?>

<html></html>

=====================================output=====================================
<?php
namespace foo;
// comment
?>

<html></html>

================================================================================
`;

exports[`only-html.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html>
<html>
  <body>
    <h1>My First Heading</h1>
    <p>My first paragraph.</p>
  </body>
</html>

=====================================output=====================================
<!DOCTYPE html>
<html>
  <body>
    <h1>My First Heading</h1>
    <p>My first paragraph.</p>
  </body>
</html>

================================================================================
`;

exports[`semicolon.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div><?= $name ?></div>
<div><?= $name, $foo ?></div>
<div><?= $name; ?></div>
<div><?= $name, $foo; ?></div>

=====================================output=====================================
<div><?= $name ?></div>
<div><?= $name, $foo ?></div>
<div><?= $name ?></div>
<div><?= $name, $foo ?></div>

================================================================================
`;

exports[`shorthand-1.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?=2 ?>

=====================================output=====================================
<?= 2 ?>

================================================================================
`;
